# eselect-python

./: Makefile.am  Makefile.in  configure.ac  python-wrapper.c  python.c  python.eselect  python.eselect.in
