AC_INIT([eselect-python], [20140125])
AM_INIT_AUTOMAKE([-Wall foreign no-dist-gzip dist-bzip2])

# note: we need AC_PROG_CC to determine EXEEXT (AC_EXEEXT does not work)
AC_PROG_CC
AC_PATH_PROG(INSTALL, install)
AC_PROG_MKDIR_P

# Create output files.
AC_CONFIG_FILES([Makefile python.eselect])

AC_OUTPUT
